--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -4,3 +4,4 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+tinystorm = { version = "0.1.0", git = "https://github.com/pipangry/tinystorm" }
